--- a/ClangPlugin.cbp
+++ b/ClangPlugin.cbp
@@ -16,13 +16,13 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="`pkg-config --cflags codeblocks`" />
-					<Add option="`wx-config --cflags`" />
+					<Add option="`wx-config --cflags --version=2.8`" />
 					<Add option="-fPIC" />
 					<Add directory="/usr/lib/llvm-3.6/include" />
 				</Compiler>
 				<Linker>
 					<Add option="`pkg-config --libs codeblocks`" />
-					<Add option="`wx-config --libs`" />
+					<Add option="`wx-config --libs --version=2.8`" />
 					<Add option="-Wl,-rpath=/usr/lib/llvm-3.6/lib" />
 					<Add library="clang" />
 					<Add directory="/usr/lib/llvm-3.6/lib" />
